[package]
name = "gmm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[features]
libm = ["dep:libm"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
#overflow-checks = false

[profile.dev]
lto = "fat"

[dependencies]
libm = { version = "0.2.8", optional = true }

